--- a/src/assets/styles/base/_bootstrap.scss
+++ b/src/assets/styles/base/_bootstrap.scss
@@ -26,6 +26,11 @@
 @import 'node_modules/bootstrap/scss/grid';
 @import 'node_modules/bootstrap/scss/helpers';
 
+@import 'node_modules/bootstrap/scss/forms';
+@import 'node_modules/bootstrap/scss/buttons';
+@import 'node_modules/bootstrap/scss/badge';
+@import 'node_modules/bootstrap/scss/toasts';
+
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import 'node_modules/bootstrap/scss/utilities/api';
 
