--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,6 +1,7 @@
 @import './abstract/_colors.scss';
 @import './abstract/_typography.scss';
 @import './abstract/_grids.scss';
+@import './abstract/_generic-vars.scss';
 @import './abstract/_bootstrap-vars.scss';
 
 @import './base/_bootstrap.scss';
